...

    <string name="please_wait">Please wait</string>

    <!---->
    <!--    HOME SCREEN-->
    <!--    -->
    <string name="welcome">Welcome!</string>
    <string name="please_sign_in">Please sign in</string>


    <!---->
    <!--    EVENTS SCREEN-->
    <!--    -->
    <string name="events_title">Mes Rendez-vous</string>
    <string name="no_events">Aucun RDV n\'est prévu</string>
    <string name="events_start">Start : %1$s</string>
    <string name="events_end">End : %1$s</string>

    <!---->
    <!--    CALENDAR SCREEN-->
    <!--    -->
    <string name="calendar_title">Jours fériés</string>
    <string name="calendar_no_holidays">Aucun jour férié</string>
...
