...
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar"
            app:popupTheme="@style/Theme.PocSecured.PopupOverlay">

            <ImageView
                android:id="@+id/toolbar_drawer_icon"
                style="@style/ToolbarIcon"
                android:contentDescription="@null" />

            <TextView
                android:id="@+id/toolbar_drawer_text"
                style="@style/ToolbarText"
...
