...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"
        tools:text="A network problem occurred. Please try again later."/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendar_recycler"
        style="@style/EventList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
